src/test/run-pass/type-in-nested-module.rs


module a {
    module b {
        type t = int;

        fn foo() { let x: t = 10; }
    }
}

fn main() { }
